--- a/index.html
+++ b/index.html
@@ -1,1 +1,160 @@
-<!DOCTYPE html><html lang="sr"> <head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=0.5"> <meta name="google" content="notranslate"/> <title>Kupujem Garsonjeru sava mala, savski venac, centar beograda</title> <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css"> </head> <style>html{background: gray;}body{background: white; font-family: Futura, 'Trebuchet MS', Arial, sans-serif; max-width: 765px; margin: 25px; display: block; margin-right: auto; margin-left: auto; padding: 25px; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;}h1, h3, h5{color: red;}hr{border: 3px solid #333; color: #000; text-align: center;}.container:before, .container:after{display: table; content: ' '; background: red; width: 20px; height: 20px;}h1{font-size: 8em; line-height: 0; margin: 75px 0 75px -10px; padding: 0; color: #D81D00;}h3{font-size: 3em; line-height: 0; margin: 45px 0 10px 0; color: #D81D00;}h3 span{font-size: 0.5em; color: #000; margin: 0 auto;}#main{margin: 30px 0 60px 0;}#left{margin: 10px 10px 0 10px;}#right{vertical-align: bottom;}#right > p:last-of-type{margin-bottom: 0;}#right > p:last-of-type::after{content: 'sa gražom ili parking mestom'; font-size: 0.766em; display: block; margin-bottom: -18%;}img{width: 520px; display: block;}p{font-size: 1.2em; font-weight: bold; color: #444444;}#contact-container{height: 140px;}.contact{display: block; transform: rotate(90deg); display: inline-block; margin: 34px -55px 0px 0; border-top: 2px dotted #000; padding: 5px}h5{font-size: 1.33em; margin: 0; color: #D81D00;}@media screen and (max-width: 49em){h1{font-size: 4em; margin: 40px 0 40px 0;}h3{font-size: 2em; margin-top: 30px;}h3 span{display: block; font-size: 0.4em; color: #000; margin: 40px 0 0 0;}#right{vertical-align: top;}#main{margin: 0;}#contact-container .contact:not(:first-of-type){display: none;}#contact-container .contact:first-of-type{transform: rotate(0deg); width: 100%; margin: 0; border: none; font-size: 1.5em;}#right > p:last-of-type{font-size: 1em;}#right > p:last-of-type::after{font-size: 0.33em;}}</style> <body> <div class="container"> <div class="pure-u-1" id="header"> <h1>KUPUJEM</h1> <hr> <h3>GARSONJERU<span id="test">CENTAR / SAVA MALA / SENJAK</span></h3> </div><div id="main"> <div class="pure-u-2-3" id="left"> <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 157.5 595.3 527" enable-background="new 0 157.5 595.3 527" xml:space="preserve"><path fill="#000002" d="M596.3,684.4H1v-8.2V157.5h8.2h259.6l0,8.2V334H588c4.6,0,8.2-0.1,8.2-0.1v342.3C596.3,680.7,596.3,684.4,596.3,684.4z M527.5,667.9h52.3V350.4H268.9v317.5h52.3l0-203.3h8.2h189.8c4.6,0,8.2,0,8.2,0L527.5,667.9L527.5,667.9z M337.7,667.9H511v-15.2H337.7L337.7,667.9L337.7,667.9z M17.5,667.9h235v-494h-235V667.9z M337.7,636.3H511v-18.8H337.7L337.7,636.3L337.7,636.3z M337.7,601H511v-18.8H337.7L337.7,601L337.7,601z M337.7,565.7H511v-18.8H337.7L337.7,565.7L337.7,565.7z M337.7,530.3H511v-18.8H337.7L337.7,530.3L337.7,530.3z M337.7,495H511v-13.9H337.7L337.7,495L337.7,495z M192.5,611h-115c0,0,0-3.7,0-8.2v-138c0,0,3.7,0.1,8.2,0.1h98.4c4.6,0,8.2-0.1,8.2-0.1v138C192.4,607.3,192.5,611,192.5,611z M143.2,594.5h32.7V481.3h-32.7V594.5z M94,594.5h32.7V481.3H94V594.5z M192.4,374.3H77.5c0,0,0-3.7,0-8.2v-138c0,0,3.7,0,8.2,0h98.4c4.6,0,8.2,0,8.2,0v138L192.4,374.3z M143.2,357.9h32.7V244.6h-32.7V357.9z M94,357.9h32.7V244.6H94V357.9z"/></svg> </div><div class="pure-u-1-4" id="right"> <p>ETAŽNO GREJANJE</p><p>STARA GRADNJA</p><p>> 25,000 EUR (KEŠ)</p></div></div><hr> <div id="contact-container"> <div class="contact pure-u-1-6"> <h5>MILOS</h5> <span>(065)409-3202</span> </div><div class="contact pure-u-1-6"> <h5>MILOS</h5> <span>(065)409-3202</span> </div><div class="contact pure-u-1-6"> <h5>MILOS</h5> <span>(065)409-3202</span> </div><div class="contact pure-u-1-6"> <h5>MILOS</h5> <span>(065)409-3202</span> </div><div class="contact pure-u-1-6"> <h5>MILOS</h5> <span>(065)409-3202</span> </div><div class="contact pure-u-1-6"> <h5>MILOS</h5> <span>(065)409-3202</span> </div><div class="contact pure-u-1-6"> <h5>MILOS</h5> <span>(065)409-3202</span> </div><div class="contact pure-u-1-6"> <h5>MILOS</h5> <span>(065)409-3202</span> </div></div></div></body></html>
+<!doctype html>
+<!--[if IE 8]><html class="no-js lt-ie9" lang="en"><![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="sr"> <!--<![endif]-->
+<head>
+
+	<!-- Basic Page Needs
+  ================================================== -->
+	<meta charset="utf-8">
+	<title>Liduska &#9825; MegaSun </title>
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!-- CSS
+  ================================================== -->
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
+	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
+	<link rel='stylesheet' href='css/base.css'>
+	<link rel='stylesheet' href='css/font-awesome.min.css'>
+	<link rel='stylesheet' href='css/superslides.css'>
+	<link rel='stylesheet' href='style.css'>
+	<link rel='stylesheet' href='css/mediaqueries.css'>
+	<link rel='stylesheet' href='colors/default.css'>
+
+
+	<!--[if lt IE 9]>
+	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+
+
+</head>
+<body>
+
+<div id="page">
+	<header id="header" class="row">
+		<div class="twelve columns">
+			<div class="wrap">
+				<div class="row">
+					<div class="six columns">
+						<div id="logo">
+							<h1><a class='current current' href="index.html">Liduska</a></h1>
+						</div>
+					</div>
+
+					<div class="six columns">
+						<nav id="nav">
+							<ul id="navigation">
+								<li class="appointment"><a href="contact.html" class="book">KONTAKT</a></li>
+								<li class="menu">
+									<a href="#"><i class="icon-reorder"></i> MENI</a>
+									<ul>
+										<li class='current'><a class='current' href="index.html">#</a></li>
+										<li><a href="ponuda.html">Ponuda</a></li>
+									</ul>
+								</li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+
+<div class="loading-container">
+	<div class="pulse"></div>
+</div>
+
+<div id="slides">
+	<ul class="slides-container">
+		<li>
+			<img src="images/solarijum-beograd.jpg" alt=""/>
+			<div class="row">
+				<div class="slide-content five columns">
+					<h1>Pravi ten za Vas</h1>
+					<a class="btn" href="ponuda.html">Ponuda</a>
+				</div>
+			</div>
+		</li>
+
+		<li>
+			<img src="images/solarijum-slavija.jpg" alt=""/>
+			<div class="row">
+				<div class="slide-content five columns">
+					<h1>Budite i Vi devojka od čokolade</h1>
+					<a class="btn" href="ponuda.html">Ponuda</a>
+				</div>
+			</div>
+		</li>
+	</ul>
+
+	<nav class="slides-navigation">
+		<a href="#" class="next">
+			<i class="icon-chevron-right"></i>
+		</a>
+		<a href="#" class="prev">
+			<i class="icon-chevron-left"></i>
+		</a>
+	</nav>
+</div>
+
+<!--
+
+<div class="featurette">
+	<div class="row">
+		<div class="twelve columns">
+			<div class="wrap">
+				<div class="row">
+					<div class="four columns item feat">
+						<figure class="item-thumb">
+							<a href="services.html">
+								<img src='http://placehold.it/760x390' width='760' height='390' alt='Placeholder Image' />
+								<div class="overlay"></div>
+								<h3>Manicure</h3>
+							</a>
+						</figure>
+
+						<h3>Manicure</h3>
+					</div>
+
+					<div class="four columns item feat">
+						<figure class="item-thumb">
+							<a href="services.html">
+								<img src='http://placehold.it/760x390' width='760' height='390' alt='Placeholder Image' />
+								<div class="overlay"></div>
+								<h3>Face Massage</h3>
+							</a>
+						</figure>
+
+						<h3>Face Massage</h3>
+					</div>
+
+					<div class="four columns item feat">
+						<figure class="item-thumb">
+							<a href="services.html">
+								<img src='http://placehold.it/760x390' width='760' height='390' alt='Placeholder Image' />
+								<div class="overlay"></div>
+								<h3>Full Body Massage</h3>
+							</a>
+						</figure>
+
+						<h3>Full Body Massage</h3>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+-->
+
+</div> <!-- #page -->
+
+<!-- Javascript
+================================================== -->
+<script src='js/jquery-1.10.1.min.js'></script>
+<script src='js/superfish.js'></script>
+<script src='js/jquery.superslides.min.js'></script>
+<script src='js/scripts.js'></script>
+
+</body>
+</html>
