--- a/ponuda.html
+++ b/ponuda.html
@@ -7,10 +7,21 @@
   ================================================== -->
 	<meta charset="utf-8">
   <title>Liduska &#9825; MegaSun </title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+<meta name="author" content="Liduska Sun">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta name="description" content="Salon lepote, solarijum, masaza, frizer. Beogradska 34, Beograd.">
+  <meta name="keywords" content="salon, lepote, solarijum, masaza, beograd, vracar">
+  <META NAME="subject" CONTENT="Solarijum">
+  <META NAME="Classification" CONTENT="Salon lepote, solarijum, masaza, frizer. Beogradska 34, Beograd.">
+  <META NAME="Keywords" CONTENT="salon, lepote, solarijum, masaza, beograd, vracar">
+  <META NAME="Geography" CONTENT="Beogradska 34">
+  <META NAME="Language" CONTENT="Serbian">
+  <META NAME="Designer" CONTENT="Milos Rujevic">
+  <META NAME="Publisher" CONTENT="Liduska">
+  <META NAME="distribution" CONTENT="Global">
+  <META NAME="zipcode" CONTENT="11000">
+  <META NAME="city" CONTENT="Belgrade"> 
+  <META NAME="country" CONTENT="Serbia">
 	<!-- CSS
   ================================================== -->
   <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
@@ -91,7 +102,7 @@
 					<p>Tekst</p>
 				</div>
 
-				<a class="read-more btn" href="">Rezerviši</a>
+				<a class="social facebook" style="color:white" href="tel:+38163261114">+381 63 261 114</a>
 			</div>
 		</div>
 
@@ -121,11 +132,11 @@
 					<p>Tekst</p>
 				</div>
 
-				<a class="read-more btn" href="">Rezerviši</a>
+				<a class="social facebook" style="color:white" href="tel:+38163261114">+381 63 261 114</a>
 			</div>
 		</div>
 
-		<span class="offer-badge"><b>PONUDA</b></span>
+		<span class="offer-badge"><b> TOP PONUDA</b></span>
 	</div>
 </article>
 
@@ -139,11 +150,19 @@
 
 		<aside class="widget widget_text group">
 	<div class="wrap">
-	<h3 class="widget-title">Tekst</h3>
-	<p>Tekst</p>
+	<h3 class="widget-title">Liduska Sun</h3>
+  <p>Salon lepote, solarijum, masaza, frizer. Beogradska 34, Beograd..</p>
 	</div>
 </aside><!-- /widget -->
 		
+	<aside class="widget widget_social group">
+		<div class="wrap">
+			<h3 class="widget-title">Kontakt ?</h3>
+			
+      <a class="social facebook" href="https://www.facebook.com/liduskasun"><i class="icon-facebook"></i></a>
+		  <a class="social facebook" href="tel:+38163261114">+381 63 261 114</a>
+    </div>
+	</aside>
 	</div>
 </main>
 
