--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
   ================================================== -->
 	<meta charset="utf-8">
 	<title>Liduska &#9825; MegaSun </title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+<meta name="author" content="Liduska Sun">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta name="description" content="Salon lepote, solarijum, masaza, frizer. Beogradska 34, Beograd.">
+  <meta name="keywords" content="salon, lepote, solarijum, masaza, beograd, vracar">
+  <META NAME="subject" CONTENT="Solarijum">
+  <META NAME="Classification" CONTENT="Salon lepote, solarijum, masaza, frizer. Beogradska 34, Beograd.">
+  <META NAME="Keywords" CONTENT="salon, lepote, solarijum, masaza, beograd, vracar">
+  <META NAME="Geography" CONTENT="Beogradska 34">
+  <META NAME="Language" CONTENT="Serbian">
+  <META NAME="Designer" CONTENT="Milos Rujevic">
+  <META NAME="Publisher" CONTENT="Liduska">
+  <META NAME="distribution" CONTENT="Global">
+  <META NAME="zipcode" CONTENT="11000">
+  <META NAME="city" CONTENT="Belgrade"> 
+  <META NAME="country" CONTENT="Serbia">
 	<!-- CSS
   ================================================== -->
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,400,300,700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
@@ -45,6 +56,8 @@
 					<div class="six columns">
 						<nav id="nav">
 							<ul id="navigation">
+                <li class="appointment"><a href="https://www.google.rs/maps/place/34+Beogradska,+Beograd+11000/@44.8038743,20.4677152,17z/data=!3m1!4b1!4m2!3m1!1s0x475a7aa0b2abd71f:0x172b328a16e45014?hl=en">34 Beogradska</a></li>
+                <li class="appointment"><a href="tel:+38163261114">+381 63 261 114</a></li>
 								<li class="appointment"><a href="contact.html" class="book">KONTAKT</a></li>
 								<li class="menu">
 									<a href="#"><i class="icon-reorder"></i> MENI</a>
@@ -80,8 +93,15 @@
 		<li>
 			<img src="images/solarijum-slavija.jpg" alt=""/>
 			<div class="row">
-				<div class="slide-content five columns">
-					<h1>Budite i Vi devojka od čokolade</h1>
+				<div class="slide-content twelve columns">
+					<h1 style="color:#592d0d;  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-size: 8em;
+  font-style: italic;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -0.075em;
+  line-height: 1;
+  text-shadow: 0 0 0 #592d0d, 0.0025em 0.0025em 0 #592d0d, 0.005em 0.005em 0 #592d0d, 0.0075em 0.0075em 0 #592d0d, 0.01em 0.01em 0 #592d0d, 0.0125em 0.0125em 0 #592d0d, 0.015em 0.015em 0 #592d0d, 0.0175em 0.0175em 0 #592d0d, 0.02em 0.02em 0 #592d0d, 0.0225em 0.0225em 0 #592d0d, 0.025em 0.025em 0 #592d0d, 0.0275em 0.0275em 0 #592d0d, 0.03em 0.03em 0 #592d0d, 0.0325em 0.0325em 0 #592d0d, 0.035em 0.035em 0 #592d0d, 0.0375em 0.0375em 0 #592d0d, 0.04em 0.04em 0 #592d0d, 0.0425em 0.0425em 0 #592d0d, 0.045em 0.045em 0 #592d0d, 0.0475em 0.0475em 0 #592d0d, 0.05em 0.05em 0 #592d0d, 0.0525em 0.0525em 0 #592d0d, 0.055em 0.055em 0 #592d0d, 0.0575em 0.0575em 0 #592d0d, 0.06em 0.06em 0 #592d0d, 0.0625em 0.0625em 0 #592d0d, 0.065em 0.065em 0 #592d0d, 0.0675em 0.0675em 0 #592d0d, 0.07em 0.07em 0 #592d0d, 0.0725em 0.0725em 0 #592d0d, 0.075em 0.075em 0 #592d0d, 0.0775em 0.0775em 0 #592d0d, 0.08em 0.08em 0 #592d0d, 0.0825em 0.0825em 0 #592d0d, 0.085em 0.085em 0 #592d0d, 0.0875em 0.0875em 0 #592d0d, 0.09em 0.09em 0 #592d0d, 0.0925em 0.0925em 0 #592d0d, 0.095em 0.095em 0 #592d0d, 0.0975em 0.0975em 0 #592d0d, 0.1em 0.1em 0 #592d0d;">Budi i ti devojka od čokolade</h1>
 					<a class="btn" href="ponuda.html">Ponuda</a>
 				</div>
 			</div>
