--- a/ponuda.html
+++ b/ponuda.html
@@ -6,7 +6,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-  <title>Liduska &#9825; MegaSun </title>
+  <title>Liduska &#9825; MegaSun</title>
 <meta name="author" content="Liduska Sun">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Salon lepote, solarijum, masaza, frizer. Beogradska 34, Beograd.">
@@ -31,6 +31,27 @@
 	<link rel='stylesheet' href='style.css'>
 	<link rel='stylesheet' href='css/mediaqueries.css'>
 	<link rel='stylesheet' href='colors/default.css'>
+
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="http://liduskasun.github.io/apple-touch-icon-57x57.png" />
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://liduskasun.github.io/apple-touch-icon-114x114.png" />
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://liduskasun.github.io/apple-touch-icon-72x72.png" />
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://liduskasun.github.io/apple-touch-icon-144x144.png" />
+<link rel="apple-touch-icon-precomposed" sizes="60x60" href="http://liduskasun.github.io/apple-touch-icon-60x60.png" />
+<link rel="apple-touch-icon-precomposed" sizes="120x120" href="http://liduskasun.github.io/apple-touch-icon-120x120.png" />
+<link rel="apple-touch-icon-precomposed" sizes="76x76" href="http://liduskasun.github.io/apple-touch-icon-76x76.png" />
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://liduskasun.github.io/apple-touch-icon-152x152.png" />
+<link rel="icon" type="image/png" href="http://liduskasun.github.io/favicon-196x196.png" sizes="196x196" />
+<link rel="icon" type="image/png" href="http://liduskasun.github.io/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/png" href="http://liduskasun.github.io/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="http://liduskasun.github.io/favicon-16x16.png" sizes="16x16" />
+<link rel="icon" type="image/png" href="http://liduskasun.github.io/favicon-128.png" sizes="128x128" />
+<meta name="application-name" content="Liduska &#9825; MegaSun"/>
+<meta name="msapplication-TileColor" content="#FFFFFF" />
+<meta name="msapplication-TileImage" content="http://liduskasun.github.io/mstile-144x144.png" />
+<meta name="msapplication-square70x70logo" content="http://liduskasun.github.io/mstile-70x70.png" />
+<meta name="msapplication-square150x150logo" content="http://liduskasun.github.io/mstile-150x150.png" />
+<meta name="msapplication-wide310x150logo" content="http://liduskasun.github.io/mstile-310x150.png" />
+<meta name="msapplication-square310x310logo" content="http://liduskasun.github.io/mstile-310x310.png" />
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
