--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <meta name="msapplication-square150x150logo" content="http://liduskasun.github.io/mstile-150x150.png" />
 <meta name="msapplication-wide310x150logo" content="http://liduskasun.github.io/mstile-310x150.png" />
 <meta name="msapplication-square310x310logo" content="http://liduskasun.github.io/mstile-310x310.png" />
-
+<meta name="google-site-verification" content="8Kl5LA5DWDaOuqAG6NED7nmjw7LtOYkhHS2a0wmEB3Y" />
 
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
