add fb meta tags

--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
 <meta name="msapplication-wide310x150logo" content="http://liduskasun.github.io/mstile-310x150.png" />
 <meta name="msapplication-square310x310logo" content="http://liduskasun.github.io/mstile-310x310.png" />
 <meta name="google-site-verification" content="8Kl5LA5DWDaOuqAG6NED7nmjw7LtOYkhHS2a0wmEB3Y" />
-
+<meta property="og:title" content="Solarijum po Vašoj meri">
+<meta property="og:site_name" content="Liduska Sun">
+<meta property="og:url" content="http://liduskasun.github.io">
+<meta property="og:description" content="Salon lepote, solarijum, masaza, frizer. Beogradska 34, Beograd..">
+<meta property="og:type" content="website">
+<meta property="og:image" content="http://liduskasun.github.io/images/solarijum-slavija.jpg"/>
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
