--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,12 @@
 <meta name="msapplication-square150x150logo" content="http://liduskasun.github.io/mstile-150x150.png" />
 <meta name="msapplication-wide310x150logo" content="http://liduskasun.github.io/mstile-310x150.png" />
 <meta name="msapplication-square310x310logo" content="http://liduskasun.github.io/mstile-310x310.png" />
-
+<meta property="og:title" content="Solarijum po Vašoj meri">
+<meta property="og:site_name" content="Liduska Sun">
+<meta property="og:url" content="http://liduskasun.github.io">
+<meta property="og:description" content="Salon lepote, solarijum, masaza, frizer. Beogradska 34, Beograd..">
+<meta property="og:type" content="website">
+<meta property="og:image" content="http://liduskasun.github.io/images/solarijum-slavija.jpg"/>
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
