add pintrest meta tag

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 <meta property="og:description" content="Salon lepote, solarijum, masaza, frizer. Beogradska 34, Beograd..">
 <meta property="og:type" content="website">
 <meta property="og:image" content="http://liduskasun.github.io/images/solarijum-slavija.jpg"/>
+    <meta name="p:domain_verify" content="f559492c00948406523bb4255ec740b6"/>
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
