--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
 	<!--[if lt IE 9]>
 	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-
+<meta name="google" value="notranslate">
 </head>
 <body style="background: url('images/solarijum-slavija.jpg') no-repeat fixed center center;">
 
