Fix background issue

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 	<![endif]-->
 <meta name="google" value="notranslate">
 </head>
-<body style="background: url('images/solarijum-slavija.jpg') no-repeat fixed center center;">
+<body style="background: #3A3A3A;">
 
 <div id="bg"></div>
 <div id="page">
