--- a/ponuda.html
+++ b/ponuda.html
@@ -69,7 +69,7 @@
 <meta property="og:image" content="http://liduskasun.github.io/images/solarijum-slavija.jpg"/>
     <meta name="google" value="notranslate">
 </head>
-<body style="background: url('images/solarijum-beograd.jpg') no-repeat fixed center center;">
+<body style="background: #3A3A3A;">
 
 <div id="bg"></div>
 <div id="page">
@@ -210,6 +210,7 @@
     
 	</div>
     </div>
+    
 	</aside>
 
 </main>
